---------------------------------------------------------------------------------------------------
Version: 0.3.7
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 2024-06-26
  Bugfixes:
    - Nullius now has injected recipes to match the asteroid mining drones.
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 2024-06-26
  Bugfixes:
    - ACTUALLY TEST THE NEW SETTING :facepalm:
    - Actually add locale for new setting
    - Actually recalculate when new setting is changed
    - Reprocess data when new setting is changed
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 2024-06-26
  Features:
    - Added setting to disable considering autplace controls. Now mods that have higher tier resources on other surfaces can kind of work. 
  Minor Features:
    - Added compatibility for Nullius
  Bugfixes:
    - Removed a crash with processing autoplace
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 2024-06-12
  Minor Features:
    - Added compatibility for SimpleSeablock. Stone and Coal still are base resources due to rocks still getting autoplaced, but that's not easy to fix.
  Bugfixes:
    - No longer considers resources disabled during map creation as available
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2024-06-05
  Minor Features:
    - PyAE's Guano problem is mostly fixed
  Changes:
    - Added ability to inject recipes from within compatibility configs
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2024-06-04
  Locale:
    - Added Ukranian translations (crowdin)