@@ -43,5 +43,6 @@ vanilla-config=Tier Calculator is using the default configuration
 [tiergen-configs]
 py=Pyanodons
 py-ae=Py Alternative Energy
+pyhardmode=Pyanodons Hard Mode
 msp=More Science Packs
 science-pack-galore=Science Pack Galore
