@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.7
 Date: ????
-  Changes:
+  Minor Features:
+    - Added compatibility for Pyanodons Hard Mode
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.6
 Date: 2024-06-26
